# revSUPRA

./: CMakeLists.txt  README.md  a.out  analyzer.cpp  analyzer.hpp  compile.sh  conformergenerator.cpp  conformergenerator.hpp  debug_kabsch.sh  helper.hpp  main.cpp  make_commands  structure.cpp  structure.hpp  test.py  tyr_ring_rot.xyz
SUPRA_Output/: conformer1.xyz  conformer100.xyz  conformer101.xyz  conformer102.xyz  conformer103.xyz  conformer104.xyz  conformer105.xyz  conformer106.xyz  conformer107.xyz  conformer108.xyz  conformer109.xyz  conformer11.xyz  conformer110.xyz  conformer111.xyz  conformer112.xyz  conformer113.xyz  conformer114.xyz  conformer115.xyz  conformer116.xyz  conformer117.xyz  conformer118.xyz  conformer119.xyz  conformer12.xyz  conformer120.xyz  conformer121.xyz  conformer122.xyz  conformer123.xyz  conformer124.xyz  conformer125.xyz  conformer126.xyz  conformer127.xyz  conformer128.xyz  conformer129.xyz  conformer13.xyz  conformer131.xyz  conformer132.xyz  conformer133.xyz  conformer134.xyz  conformer135.xyz  conformer136.xyz  (+261 more)
apply/: run
apply2/: doubles_pairs  helper.sh  run
copy_apply2/: gfnff.sh  helper.sh
copy_standard/: conformer10.xyz  conformer5.xyz  conformer9.xyz
copy_symmetry/: conformer1.xyz  conformer2.xyz  conformer6.xyz  conformer8.xyz
debug_files/: clash_structure0.xyz  clash_structure1.xyz  clash_structure10.xyz  clash_structure11.xyz  clash_structure12.xyz  clash_structure13.xyz  clash_structure14.xyz  clash_structure15.xyz  clash_structure16.xyz  clash_structure17.xyz  clash_structure18.xyz  clash_structure19.xyz  (+20 more)
(+15130 files in other folders)
